Add JUnit 5 tests for Book with null ISBN guard
- Add BookTest covering factory, equals edge cases, and hashCode contract
- Guard Book.of() against null ISBN with NullPointerException
- Add JUnit 5.11.4 JARs to lib/ and wire test/ source root in IML
- Document test compile/run commands in CLAUDE.md

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>